--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 #Categroy messages
 category-not-found-with-id=Category not found with ID
+category-updating-reigster-not-found=Error updating: register not found with ID
