--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 #Categroy messages
 category-not-found-with-id=Category not found with ID
-category-updating-reigster-not-found=Error updating: register not found with ID
+category-updating-reigster-not-found=Error updating: register not found
+category-deleting-error=Error deleting category with ID
+category-deleting-error-id-not-found=Error deleting: register not found
